# EasyFPS

./: Cargo.toml  LICENSE  README.md  build.rs
src/: fps_capture.rs  fullscreen.rs  gui.rs  main.rs  monitor.rs  overlay.rs  settings.rs  tray.rs
