[package]
name = "easyfps"
version = "0.1.0"
edition = "2021"
authors = ["Matteo"]
description = "A simple, lightweight FPS counter for fullscreen games"

[dependencies]
# Windows API (versione stabile)
# Windows API (versione stabile)
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Performance",
    "Win32_UI_Controls",
] }

# ETW for FPS capture - Aggiornato all'ultima versione
ferrisetw = "1.2"



# Gestione chiusura sicura
ctrlc = "3.4"

# System tray
tray-icon = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true